# undbtest

./: .gitignore  pyproject.toml
data/: aenc.sqlite  northwind.db
notebooks/: customer.ipynb  employee.ipynb  order.ipynb  product.ipynb  template.ipynb
