[tool.poetry]
name = "unitedoutdoors"
version = "0.1.0"
description = ""
authors = ["David <71024003+DavidOut03@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
matplotlib = "^3.8.4"
pyodbc = "^5.1.0"
scikit-learn = "^1.4.2"
sqlalchemy = "^2.0.29"
sqlalchemy-access = "^2.0.2"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
